--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
