--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "@tiptap/extension-task-item": "^3.0.1",
+    "@tiptap/extension-task-list": "^3.0.1",
+    "@tiptap/react": "^3.0.1",
+    "@tiptap/starter-kit": "^3.0.1",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "react": "^19.1.0",
