--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
     "@tailwindcss/vite": "^4.1.8",
     "@tiptap/extension-highlight": "^3.0.1",
     "@tiptap/extension-history": "^3.0.1",
+    "@tiptap/extension-horizontal-rule": "^3.0.6",
+    "@tiptap/extension-strike": "^3.0.6",
     "@tiptap/extension-table": "^3.0.1",
     "@tiptap/extension-table-cell": "^3.0.1",
     "@tiptap/extension-table-row": "^3.0.1",
     "@tiptap/extension-task-item": "^3.0.1",
     "@tiptap/extension-task-list": "^3.0.1",
+    "@tiptap/extension-underline": "^3.0.6",
     "@tiptap/react": "^3.0.1",
     "@tiptap/starter-kit": "^3.0.1",
     "axios": "^1.9.0",
